tests/syntax_error/import1.jou
import 1  # Error: expected a string to specify the file name, got an integer
